--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -109,7 +109,6 @@ label {
 	color:white;
 	font-size:1.2em;
 	@include boxshadow-main;
-	
 
 	div {
 		padding-top:30px;
@@ -268,7 +267,7 @@ label {
 
 .nav {
 	height:115px;
-	float:right;
+	float: right;
 	margin-bottom:40px;
 
 	a {
@@ -285,6 +284,10 @@ label {
   		display:inline-block;
   		margin-left:10px;
   		font-size:1.2em;
+  	}
+
+  	li ul {
+  		display:none;
   	}
 }
 
